tests/codegen/errors/env/env/define.nil.optional.return/atom.menu.error.env.define.nil.optional.return.002/menu-env-define.nil.optional.return-002.mon
;; TEST-ID: tests.codegen.menu.errors.env.define.nil.optional.return.002
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: env/define.nil.optional.return
;; TEST-MENU: errors/env/define.nil.optional.return/atom.menu.error.env.define.nil.optional.return.002
;; TEST-MENU-PATH: codegen/errors/env/define.nil.optional.return/atom.menu.error.env.define.nil.optional.return.002
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin env.c diagnostic: can return nil but return type
;; TEST-ATOM: atom.menu.error.env.define.nil.optional.return.002
;; TEST-CODEGEN-ATOM: atom.menu.error.env.define.nil.optional.return.002
;; TEST-ATOM-LEAF: atom.menu.error.env.define.nil.optional.return.002
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: env
;; TEST-ERROR-FAMILY: define.nil.optional.return
;; TEST-ERROR-MESSAGE: can return nil but return type
;; TEST-ERROR-SOURCE: env.c
;; TEST-ERROR-PATH: env.c:742
;; TEST-CODEGEN-PATH: diagnostic.env.define.nil.optional.return
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: env
;; TEST-TAG: menu
;; TEST-COVERAGE: env.c:742 can return nil but return type
;; TEST-USES-ATOM: atom.menu.error.env.define.nil.optional.return.002
;; TEST-USES-ATOM: atom.error.env
;; TEST-USES-ATOM: atom.error.env.define.nil.optional.return
;; TEST-USES-ATOM: atom.env.error
;; TEST-DEPENDS-ON: atom.env.hm.check.call
;; TEST-DEPENDS-ON: atom.env.hm.infer.define
;; TEST-REFINES: atom.error.env
;; TEST-REFINES: atom.error.env.define.nil.optional.return
;; TEST-REFINES: atom.env.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors env env

(module Main)
(define (env_menu_nil_ret_3_2 [x : Int] -> Int) nil)
(show (env_menu_nil_ret_3_2 1))
